[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/GFX/Items/spring.png" type="Texture" id=1]
[ext_resource path="res://Assets/GFX/Items/spring_out.png" type="Texture" id=2]
[ext_resource path="res://Assets/GFX/Items/spring_in.png" type="Texture" id=3]
[ext_resource path="res://JumpPad.gd" type="Script" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": false,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 71.5, 18.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 72.5, 38.75 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 73, 29 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 73, 55 )

[node name="JumpPad" type="Area2D"]
collision_layer = 16
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="TriggerArea" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, -39.5 )
shape = SubResource( 5 )
one_way_collision = true

[node name="SpringBody" type="StaticBody2D" parent="."]
collision_layer = 16

[node name="BoundingBoxResting" type="CollisionShape2D" parent="SpringBody"]
visible = false
position = Vector2( 0, 0.25 )
shape = SubResource( 2 )

[node name="BoundingBoxCompressed" type="CollisionShape2D" parent="SpringBody"]
visible = false
shape = SubResource( 3 )

[node name="BoundingBoxSprung" type="CollisionShape2D" parent="SpringBody"]
visible = false
shape = SubResource( 4 )

[connection signal="body_entered" from="." to="." method="_on_JumpPad_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_JumpPad_body_exited"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
